--- a/train.ipynb
+++ b/train.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "5cfe22e5-7f59-4bf6-bb8f-8badf92028c9",
    "metadata": {},
    "outputs": [],
@@ -42,26 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ee97c0b6-201b-4181-b85d-b55b45921a87",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'data/trainset.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgiflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mbox\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m BoxDataset\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(data, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtrainset.pkl\u001b[39m\u001b[38;5;124m'\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m      4\u001b[0m     dt \u001b[38;5;241m=\u001b[39m pkl\u001b[38;5;241m.\u001b[39mload(file)\n\u001b[1;32m      5\u001b[0m     train_data, train_conditional \u001b[38;5;241m=\u001b[39m dt\u001b[38;5;241m.\u001b[39mmake_data_for_network(\n\u001b[1;32m      6\u001b[0m         \u001b[38;5;66;03m# Since mix_survey_order=True we need the information below for the network to identify the survey locations\u001b[39;00m\n\u001b[1;32m      7\u001b[0m         survey_coordinates_to_include \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124my\u001b[39m\u001b[38;5;124m'\u001b[39m],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     11\u001b[0m         mix_survey_order \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m     12\u001b[0m     )\n",
-      "File \u001b[0;32m/opt/anaconda3/envs/exenv/lib/python3.12/site-packages/IPython/core/interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    322\u001b[0m     )\n\u001b[0;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/trainset.pkl'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from giflow.box import BoxDataset\n",
+    "import pickle as pkl\n",
     "\n",
+    "# Reading in files\n",
+    "trainsize = 5000\n",
     "with open(os.path.join(data, 'trainset.pkl'), 'rb') as file:\n",
     "    dt = pkl.load(file)\n",
     "    train_data, train_conditional = dt.make_data_for_network(\n",
@@ -72,14 +62,15 @@
     "    )\n",
     "\n",
     "# Need to do this with the validation data too\n",
-    "with open(os.path.join(data, 'validationset.pkl'), 'rb') as file:\n",
+    "valsize = 500\n",
+    "with open(os.path.join(data, 'valset.pkl'), 'rb') as file:\n",
     "    dt = pkl.load(file)\n",
     "    validation_data, validation_conditional = dt.make_data_for_network(\n",
     "        survey_coordinates_to_include = ['noise_scale'],\n",
     "        model_info_to_include = [],\n",
     "        add_noise = True,\n",
-    "        mix_survey_order = False\n",
-    "    )"
+    "        mix_survey_order = False,\n",
+    "    )\n"
    ]
   },
   {
@@ -92,19 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "25edba9d-f812-4a59-b6dd-9507ef64d087",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting scaler and compressor to data set...\n",
+      "Fitting scaler and compressor to data set...\n"
+     ]
+    }
+   ],
    "source": [
     "from giflow.scaler import Scaler\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "# Scaling the data first\n",
     "sc_data = Scaler(scalers = [MinMaxScaler()]) # Need to define the scaler for each element in the train_data list.\n",
     "sc_data.scale_data(train_data, fit = True) # Fit the scaler and store in the class\n",
     "\n",
-    "sc_conditional = Scaler(scalers = [MinMaxScaler(), MinMaxScaler()]\n",
+    "sc_conditional = Scaler(scalers = [MinMaxScaler(), MinMaxScaler()])\n",
     "sc_conditional.scale_data(train_conditional, fit = True)\n",
     "\n",
     "scalers = {'conditional': sc_conditional, 'data': sc_data}"
@@ -122,13 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cc50d4b6-0f75-41c5-97ae-3abe768e1dbb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "from giflow.flowmodel import FlowModel\n",
+    "from giflow.flowmodel import FlowModel, save_flow\n",
     "\n",
     "hyperparameters = {\n",
     "        'n_inputs': 7, # the total number of parameters in the source model, including any additional information we chose to include\n",
@@ -145,15 +144,15 @@
     "}\n",
     "\n",
     "# Construct the flow\n",
-    "flow.save_location = save\n",
-    "flow.data_location = data\n",
     "flow = FlowModel(\n",
     "        hyperparameters = hyperparameters,\n",
-    "        datasize = datasize,\n",
+    "        datasize = trainsize,\n",
     "        scalers = scalers\n",
-    ")\n",
+    ");\n",
+    "flow.save_location = save\n",
+    "flow.data_location = data\n",
     "save_flow(flow)\n",
-    "flow.construct()"
+    "flow.construct();"
    ]
   },
   {
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c5e8bbcd-59b9-4958-bdbe-43470ca494aa",
    "metadata": {},
    "outputs": [],
@@ -205,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9a78d40d-2c9f-4d91-8b97-297922bbda38",
    "metadata": {},
    "outputs": [],
@@ -225,14 +224,6 @@
     "    validation_conditional, \n",
     "    device = device, \n",
     "    scale = True\n",
-    ")\n",
-    "\n",
-    "flow.train(\n",
-    "    optimiser = optimiser,\n",
-    "    validation_dataset = validation_dataset,\n",
-    "    train_dataset = train_dataset,\n",
-    "    scheduler = scheduler,\n",
-    "    device = device\n",
     ")"
    ]
   },
@@ -240,6 +231,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c465e990-4592-4a5a-9bb5-cf3c185c8d20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flow.train(\n",
+    "    optimiser = optimiser,\n",
+    "    validation_dataset = validation_dataset,\n",
+    "    train_dataset = train_dataset,\n",
+    "    scheduler = None,\n",
+    "    device = device\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77aafad3-65a1-44ba-b1b3-c4b9fa4bdbd1",
+   "metadata": {},
+   "source": [
+    "All the outputs, including diagnostics and loss plots are saved in the `trained_flow` directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5dbd9d2c-034e-4a3b-a0e1-cefc1e17d536",
    "metadata": {},
    "outputs": [],
    "source": []
